# fastapi-async-testing

./: pyproject.toml
fastapi_test/: main.py  test_main.py
