[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Nandan Rao <nandan@kannactnow.com>"]
readme = "README.md"
packages = [{include = "fastapi_test"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
pydantic = "^1.10.7"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[tool.poetry.group.dev.dependencies]
httpx = "^0.24.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
